@@ -22,15 +22,18 @@
 
 package io.crate.planner.projection;
 
+import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.analyze.symbol.SymbolVisitors;
 import io.crate.analyze.symbol.Symbols;
 import io.crate.collections.Lists2;
+import io.crate.planner.ExplainLeaf;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
 
 /**
@@ -90,5 +93,13 @@ public class EvalProjection extends Projection {
         int result = super.hashCode();
         result = 31 * result + outputs.hashCode();
         return result;
+    }
+
+    @Override
+    public Map<String, Object> mapRepresentation() {
+        return ImmutableMap.of(
+            "type", "Eval",
+            "outputs", ExplainLeaf.printList(outputs)
+        );
     }
 }
