@@ -22,10 +22,12 @@
 package io.crate.planner.projection;
 
 import com.carrotsearch.hppc.IntSet;
+import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.collections.Lists2;
 import io.crate.metadata.TableIdent;
 import io.crate.operation.Paging;
+import io.crate.planner.ExplainLeaf;
 import io.crate.planner.node.fetch.FetchSource;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
@@ -126,5 +128,13 @@ public class FetchProjection extends Projection {
     public void writeTo(StreamOutput out) throws IOException {
         throw new UnsupportedOperationException("writeTo is not supported for " +
                                                 FetchProjection.class.getSimpleName());
+    }
+
+    @Override
+    public Map<String, Object> mapRepresentation() {
+        return ImmutableMap.of(
+            "type", "Fetch",
+            "outputs", ExplainLeaf.printList(outputSymbols)
+        );
     }
 }
