@@ -22,6 +22,7 @@
 package io.crate.planner.projection;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.analyze.symbol.SymbolVisitors;
 import io.crate.analyze.symbol.Symbols;
@@ -32,6 +33,7 @@ import org.elasticsearch.common.io.stream.StreamOutput;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 
@@ -109,5 +111,13 @@ public class FilterProjection extends Projection {
     public int hashCode() {
         int result = super.hashCode();
         return 31 * result + (query != null ? query.hashCode() : 0);
+    }
+
+    @Override
+    public Map<String, Object> mapRepresentation() {
+        return ImmutableMap.of(
+            "type", "Filter",
+            "filter", query.representation()
+        );
     }
 }
