@@ -21,18 +21,21 @@
 
 package io.crate.planner.projection;
 
+import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.symbol.AggregateMode;
 import io.crate.analyze.symbol.Aggregation;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.analyze.symbol.Symbols;
 import io.crate.collections.Lists2;
 import io.crate.metadata.RowGranularity;
+import io.crate.planner.ExplainLeaf;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
 
 public class GroupProjection extends Projection {
@@ -131,5 +134,14 @@ public class GroupProjection extends Projection {
 
     public AggregateMode mode() {
         return mode;
+    }
+
+    @Override
+    public Map<String, Object> mapRepresentation() {
+        return ImmutableMap.of(
+            "type", "HashAggregation",
+            "keys", ExplainLeaf.printList(keys),
+            "aggregations", ExplainLeaf.printList(values)
+        );
     }
 }
