@@ -22,18 +22,18 @@
 
 package io.crate.planner.projection;
 
+import com.google.common.collect.ImmutableMap;
+import io.crate.analyze.OrderBy;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.analyze.symbol.SymbolVisitors;
 import io.crate.analyze.symbol.Symbols;
 import io.crate.collections.Lists2;
+import io.crate.planner.ExplainLeaf;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.function.Function;
 
 public class OrderedTopNProjection extends Projection {
@@ -167,5 +167,17 @@ public class OrderedTopNProjection extends Projection {
         result = 31 * result + Arrays.hashCode(reverseFlags);
         result = 31 * result + Arrays.hashCode(nullsFirst);
         return result;
+    }
+
+    @Override
+    public Map<String, Object> mapRepresentation() {
+        return ImmutableMap.of(
+            "type", "OrderByTopN",
+            "limit", limit,
+            "offset", offset,
+            "outputs", ExplainLeaf.printList(outputs),
+            "orderBy", OrderBy.explainRepresentation(
+                new StringBuilder("["), orderBy, reverseFlags, nullsFirst).append("]").toString()
+        );
     }
 }
