@@ -21,16 +21,19 @@
 
 package io.crate.planner.projection;
 
+import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.analyze.symbol.SymbolVisitors;
 import io.crate.analyze.symbol.Symbols;
 import io.crate.collections.Lists2;
 import io.crate.operation.projectors.TopN;
+import io.crate.planner.ExplainLeaf;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
 
 public class TopNProjection extends Projection {
@@ -109,6 +112,16 @@ public class TopNProjection extends Projection {
         result = 31 * result + offset;
         result = 31 * result + outputs.hashCode();
         return result;
+    }
+
+    @Override
+    public Map<String, Object> mapRepresentation() {
+        return ImmutableMap.of(
+            "type", "TopN",
+            "limit", limit,
+            "offset", offset,
+            "outputs", ExplainLeaf.printList(outputs)
+        );
     }
 
     @Override
